--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,25 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 'rovo89:Xposed Bridge APIs:15'
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.brandonnalls.mockmocklocations"
         minSdkVersion 15
-        targetSdkVersion 15
+        targetSdkVersion 23
         versionCode 2
         versionName "1.1"
-    }
+    }/*
     buildTypes {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
+    }*/
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    provided fileTree(dir: 'lib', include: ['*.jar'])
+
 }
